--- a/src/index.html
+++ b/src/index.html
@@ -52,8 +52,8 @@
             <div class="showup__wrapper">
                 <div class="showup__intro">
                     <div class="title">bring<span>it</span>up</div>
-                    <div class="subtitle">We can give you an education that you need</div>
-                    <button class="btn">Get free access</button>
+                    <!-- <div class="subtitle">We can give you an education that you need</div> -->
+                    <a href="http://localhost:3000/modules.html" class="btn">Get free access</button>
                 </div>
                 <div class="showup__video">
                     <div class="showup__author">
