--- a/src/index.html
+++ b/src/index.html
@@ -1083,10 +1083,12 @@
     </div>
     <div class="overlay">
         <div class="video">
-            <div id="frame"></div>
+            <div id="player"></div>
             <div class="close">&times;</div>
         </div>
     </div>
+
+    
 
     <script src="js/bundle.js"></script>
 </body>
