--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,7 @@
                     <div data-url="vZ4Sne0wdxY" class="play">
                         <div class="play__circle">
                             <svg viewBox="0 0 14 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M14 8L0 16V0L14 8Z" fill="#6D53AF"/>
+                                <path d="M14 8L0 16V0L14 8Z" fill="J58VPpPrmQU"/>
                             </svg>
                         </div>
                         <div class="play__text">why</div>
@@ -1030,7 +1030,7 @@
                             <div class="play">
                                 <div class="play__circle">
                                     <svg viewBox="0 0 14 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                        <path d="M14 8L0 16V0L14 8Z" fill="#6D53AF"/>
+                                        <path d="M14 8L0 16V0L14 8Z" fill="J58VPpPrmQU"/>
                                     </svg>
                                 </div>
                                 <div class="play__text">play video</div>
