--- a/src/index.html
+++ b/src/index.html
@@ -61,9 +61,9 @@
                         <div class="showup__author-position">CEO</div>
                     </div>
                     <div data-url="vZ4Sne0wdxY" class="play">
-                        <div class="play__circle">
+                        <div class="play__circle" fill="FnTqlf2iPkE">
                             <svg viewBox="0 0 14 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M14 8L0 16V0L14 8Z" fill="J58VPpPrmQU"/>
+                                <path d="M14 8L0 16V0L14 8Z" />
                             </svg>
                         </div>
                         <div class="play__text">why</div>
@@ -1028,9 +1028,9 @@
                         </div>
                         <div class="video">
                             <div class="play">
-                                <div class="play__circle">
+                                <div class="play__circle" fill="J58VPpPrmQU">
                                     <svg viewBox="0 0 14 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                        <path d="M14 8L0 16V0L14 8Z" fill="J58VPpPrmQU"/>
+                                        <path d="M14 8L0 16V0L14 8Z" />
                                     </svg>
                                 </div>
                                 <div class="play__text">play video</div>
