--- a/src/modules.html
+++ b/src/modules.html
@@ -53,9 +53,9 @@
                     <div class="module__video-item module__video-item_1">
                         <div class="video__title">Show up</div>
                         <div data-url="ZpCluchEflg" class="play">
-                            <div class="play__circle">
+                            <div class="play__circle" fill="WbcS7zpTa5M">
                                 <svg viewBox="0 0 14 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M14 8L0 16V0L14 8Z" fill="#E8iYMQIY9dk"/>
+                                    <path d="M14 8L0 16V0L14 8Z" />
                                 </svg>
                             </div>
                             <div class="play__text">play video</div>
@@ -64,10 +64,10 @@
                     <div class="module__video-item module__video-item_2">
                         <div class="video__title">Evolve</div>
                         <div data-url="jrTMMG0zJyI" class="play">
-                            <div class="play__circle closed">
+                            <div class="play__circle closed" fill="HUu4VM3-bCA">
                                 <svg class="lock" width="21" height="27" viewBox="0 0 21 27" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <g opacity="0.24">
-                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M19.6875 10.125H18V7.875C18 3.53271 14.4673 0 10.125 0C5.78265 0 2.25 3.53271 2.25 7.875V10.125H0.5625C0.251587 10.125 0 10.3766 0 10.6875V24.75C0 25.991 1.00909 27 2.25 27H18.0001C19.2409 27 20.25 25.991 20.25 24.75V10.6875C20.25 10.3766 19.9984 10.125 19.6875 10.125ZM11.8093 21.8755C11.8268 22.0342 11.7758 22.1935 11.6692 22.3127C11.5626 22.4319 11.4099 22.5 11.2501 22.5H9.00006C8.97614 22.5 8.95239 22.4985 8.92896 22.4956C8.87848 22.4891 8.82935 22.4758 8.78284 22.4564C8.70648 22.4244 8.63727 22.3757 8.58093 22.3127C8.54712 22.2749 8.51892 22.233 8.4967 22.1885C8.44885 22.0925 8.42883 21.9839 8.44086 21.8755L8.79572 18.6844C8.21948 18.2654 7.87506 17.6023 7.87506 16.875C7.87506 15.6342 8.88416 14.625 10.1251 14.625C11.366 14.625 12.3751 15.634 12.3751 16.875C12.3751 17.6023 12.0307 18.2654 11.4545 18.6844L11.8093 21.8755ZM5.625 7.875V10.125H14.6249V7.875C14.6249 5.39368 12.6063 3.375 10.125 3.375C7.64374 3.375 5.625 5.39368 5.625 7.875Z" fill="black"/>
+                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M19.6875 10.125H18V7.875C18 3.53271 14.4673 0 10.125 0C5.78265 0 2.25 3.53271 2.25 7.875V10.125H0.5625C0.251587 10.125 0 10.3766 0 10.6875V24.75C0 25.991 1.00909 27 2.25 27H18.0001C19.2409 27 20.25 25.991 20.25 24.75V10.6875C20.25 10.3766 19.9984 10.125 19.6875 10.125ZM11.8093 21.8755C11.8268 22.0342 11.7758 22.1935 11.6692 22.3127C11.5626 22.4319 11.4099 22.5 11.2501 22.5H9.00006C8.97614 22.5 8.95239 22.4985 8.92896 22.4956C8.87848 22.4891 8.82935 22.4758 8.78284 22.4564C8.70648 22.4244 8.63727 22.3757 8.58093 22.3127C8.54712 22.2749 8.51892 22.233 8.4967 22.1885C8.44885 22.0925 8.42883 21.9839 8.44086 21.8755L8.79572 18.6844C8.21948 18.2654 7.87506 17.6023 7.87506 16.875C7.87506 15.6342 8.88416 14.625 10.1251 14.625C11.366 14.625 12.3751 15.634 12.3751 16.875C12.3751 17.6023 12.0307 18.2654 11.4545 18.6844L11.8093 21.8755ZM5.625 7.875V10.125H14.6249V7.875C14.6249 5.39368 12.6063 3.375 10.125 3.375C7.64374 3.375 5.625 5.39368 5.625 7.875Z" />
                                     </g>
                                 </svg>                                    
                             </div>
@@ -194,9 +194,9 @@
                     <div class="module__video-item module__video-item_3">
                         <div class="video__title">Show up</div>
                         <div data-url="aQ-2JkcdbQA" class="play">
-                            <div class="play__circle">
+                            <div class="play__circle" fill="#6D53AF">
                                 <svg viewBox="0 0 14 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M14 8L0 16V0L14 8Z" fill="#6D53AF"/>
+                                    <path d="M14 8L0 16V0L14 8Z" />
                                 </svg>
                             </div>
                             <div class="play__text">play video</div>
@@ -205,10 +205,10 @@
                     <div class="module__video-item module__video-item_4">
                         <div class="video__title">Evolve</div>
                         <div data-url="KOX67QP75ZY" class="play">
-                            <div class="play__circle closed">
+                            <div class="play__circle closed" fill="black">
                                 <svg class="lock" width="21" height="27" viewBox="0 0 21 27" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <g opacity="0.24">
-                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M19.6875 10.125H18V7.875C18 3.53271 14.4673 0 10.125 0C5.78265 0 2.25 3.53271 2.25 7.875V10.125H0.5625C0.251587 10.125 0 10.3766 0 10.6875V24.75C0 25.991 1.00909 27 2.25 27H18.0001C19.2409 27 20.25 25.991 20.25 24.75V10.6875C20.25 10.3766 19.9984 10.125 19.6875 10.125ZM11.8093 21.8755C11.8268 22.0342 11.7758 22.1935 11.6692 22.3127C11.5626 22.4319 11.4099 22.5 11.2501 22.5H9.00006C8.97614 22.5 8.95239 22.4985 8.92896 22.4956C8.87848 22.4891 8.82935 22.4758 8.78284 22.4564C8.70648 22.4244 8.63727 22.3757 8.58093 22.3127C8.54712 22.2749 8.51892 22.233 8.4967 22.1885C8.44885 22.0925 8.42883 21.9839 8.44086 21.8755L8.79572 18.6844C8.21948 18.2654 7.87506 17.6023 7.87506 16.875C7.87506 15.6342 8.88416 14.625 10.1251 14.625C11.366 14.625 12.3751 15.634 12.3751 16.875C12.3751 17.6023 12.0307 18.2654 11.4545 18.6844L11.8093 21.8755ZM5.625 7.875V10.125H14.6249V7.875C14.6249 5.39368 12.6063 3.375 10.125 3.375C7.64374 3.375 5.625 5.39368 5.625 7.875Z" fill="black"/>
+                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M19.6875 10.125H18V7.875C18 3.53271 14.4673 0 10.125 0C5.78265 0 2.25 3.53271 2.25 7.875V10.125H0.5625C0.251587 10.125 0 10.3766 0 10.6875V24.75C0 25.991 1.00909 27 2.25 27H18.0001C19.2409 27 20.25 25.991 20.25 24.75V10.6875C20.25 10.3766 19.9984 10.125 19.6875 10.125ZM11.8093 21.8755C11.8268 22.0342 11.7758 22.1935 11.6692 22.3127C11.5626 22.4319 11.4099 22.5 11.2501 22.5H9.00006C8.97614 22.5 8.95239 22.4985 8.92896 22.4956C8.87848 22.4891 8.82935 22.4758 8.78284 22.4564C8.70648 22.4244 8.63727 22.3757 8.58093 22.3127C8.54712 22.2749 8.51892 22.233 8.4967 22.1885C8.44885 22.0925 8.42883 21.9839 8.44086 21.8755L8.79572 18.6844C8.21948 18.2654 7.87506 17.6023 7.87506 16.875C7.87506 15.6342 8.88416 14.625 10.1251 14.625C11.366 14.625 12.3751 15.634 12.3751 16.875C12.3751 17.6023 12.0307 18.2654 11.4545 18.6844L11.8093 21.8755ZM5.625 7.875V10.125H14.6249V7.875C14.6249 5.39368 12.6063 3.375 10.125 3.375C7.64374 3.375 5.625 5.39368 5.625 7.875Z" />
                                     </g>
                                 </svg>                                    
                             </div>
@@ -1138,7 +1138,7 @@
     </div>
     <div class="overlay">
         <div class="video">
-            <div id="frame"></div>
+            <div id="player"></div>
             <div class="close">&times;</div>
         </div>
     </div>
